--- a/OREData/test/CMakeLists.txt
+++ b/OREData/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 # cpp files, this list is maintained manually
 
-set(OREData-Test_SRC bond.cpp
+set(OREData-Test_SRC basecorrelationcurve.cpp
+bond.cpp
 calendaradjustment.cpp
 calendars.cpp
 ccyswapwithresets.cpp
