--- a/Tools/PythonTools/comparison_config.json
+++ b/Tools/PythonTools/comparison_config.json
@@ -510,6 +510,21 @@
           }
         ]
       },
+      ".*npv.*.json": {
+        "keys": [
+          "tradeId"
+        ],
+        "column_settings": [
+          {
+            "names": [
+              "npv",
+              "npvBase"
+            ],
+            "abs_tol": null,
+            "rel_tol": 1e-12
+          }
+        ]
+      },
       ".*additional_results.*.csv": {
         "keys": [
           "TradeId",
