[touch:1412]copy fixed kinterpolated yoy vol to qle, since the fix breaks a unit test in ql which uses hardcoded values (so I won't waste time to repair this now)

--- a/QuantExt/qle/CMakeLists.txt
+++ b/QuantExt/qle/CMakeLists.txt
@@ -502,6 +502,7 @@ termstructures/interpolatedhazardratecurve.hpp
 termstructures/interpolatedsurvivalprobabilitycurve.hpp
 termstructures/interpolatedyoycapfloortermpricesurface.hpp
 termstructures/iterativebootstrap.hpp
+termstructures/kinterpolatedyoyoptionletvolatilitysurface.hpp
 termstructures/multisectiondefaultcurve.hpp
 termstructures/oibasisswaphelper.hpp
 termstructures/oiccbasisswaphelper.hpp
