update win build

--- a/QuantExt/QuantExt.vcxproj
+++ b/QuantExt/QuantExt.vcxproj
@@ -732,7 +732,6 @@
     <ClInclude Include="qle\termstructures\capfloortermvolsurface.hpp" />
     <ClInclude Include="qle\termstructures\commodityaveragebasispricecurve.hpp" />
     <ClInclude Include="qle\termstructures\commoditybasispricecurve.hpp" />
-    <ClInclude Include="qle\termstructures\constantyoyinflationoptionletvolatility.hpp" />
     <ClInclude Include="qle\termstructures\correlationtermstructure.hpp" />
     <ClInclude Include="qle\termstructures\crossccybasismtmresetswaphelper.hpp" />
     <ClInclude Include="qle\termstructures\crossccyfixfloatswaphelper.hpp" />
@@ -784,10 +783,20 @@
     <ClInclude Include="qle\termstructures\pricetermstructureadapter.hpp" />
     <ClInclude Include="qle\termstructures\pricetermstructure.hpp" />
     <ClInclude Include="qle\termstructures\probabilitytraits.hpp" />
+    <ClInclude Include="qle\termstructures\spreadedblackvolatilitycurve.hpp" />
+    <ClInclude Include="qle\termstructures\spreadedblackvolatilitysurfacemoneyness.hpp" />
+    <ClInclude Include="qle\termstructures\spreadedcorrelationcurve.hpp" />
+    <ClInclude Include="qle\termstructures\spreadedcpivolatilitysurface.hpp" />
     <ClInclude Include="qle\termstructures\spreadeddiscountcurve.hpp" />
+    <ClInclude Include="qle\termstructures\spreadedinflationcurve.hpp" />
     <ClInclude Include="qle\termstructures\spreadedoptionletvolatility.hpp" />
+    <ClInclude Include="qle\termstructures\spreadedoptionletvolatility2.hpp" />
+    <ClInclude Include="qle\termstructures\spreadedpricetermstructure.hpp" />
     <ClInclude Include="qle\termstructures\spreadedsmilesection.hpp" />
+    <ClInclude Include="qle\termstructures\spreadedsmilesection2.hpp" />
+    <ClInclude Include="qle\termstructures\spreadedsurvivalprobabilitytermstructure.hpp" />
     <ClInclude Include="qle\termstructures\spreadedswaptionvolatility.hpp" />
+    <ClInclude Include="qle\termstructures\spreadedyoyvolsurface.hpp" />
     <ClInclude Include="qle\termstructures\staticallycorrectedyieldtermstructure.hpp" />
     <ClInclude Include="qle\termstructures\strippedoptionletadapter.hpp" />
     <ClInclude Include="qle\termstructures\strippedcpivolatilitystructure.hpp" />
@@ -981,7 +990,6 @@
     <ClCompile Include="qle\termstructures\brlcdiratehelper.cpp" />
     <ClCompile Include="qle\termstructures\capfloorhelper.cpp" />
     <ClCompile Include="qle\termstructures\capfloortermvolsurface.cpp" />
-    <ClCompile Include="qle\termstructures\constantyoyinflationoptionletvolatility.cpp" />
     <ClCompile Include="qle\termstructures\correlationtermstructure.cpp" />
     <ClCompile Include="qle\termstructures\crossccybasismtmresetswaphelper.cpp" />
     <ClCompile Include="qle\termstructures\crossccybasisswaphelper.cpp" />
@@ -1010,10 +1018,20 @@
     <ClCompile Include="qle\termstructures\optionletstripper2.cpp" />
     <ClCompile Include="qle\termstructures\pricetermstructure.cpp" />
     <ClCompile Include="qle\termstructures\pricetermstructureadapter.cpp" />
+    <ClCompile Include="qle\termstructures\spreadedblackvolatilitycurve.cpp" />
+    <ClCompile Include="qle\termstructures\spreadedblackvolatilitysurfacemoneyness.cpp" />
+    <ClCompile Include="qle\termstructures\spreadedcorrelationcurve.cpp" />
+    <ClCompile Include="qle\termstructures\spreadedcpivolatilitysurface.cpp" />
     <ClCompile Include="qle\termstructures\spreadeddiscountcurve.cpp" />
+    <ClCompile Include="qle\termstructures\spreadedinflationcurve.cpp" />
     <ClCompile Include="qle\termstructures\spreadedoptionletvolatility.cpp" />
+    <ClCompile Include="qle\termstructures\spreadedoptionletvolatility2.cpp" />
+    <ClCompile Include="qle\termstructures\spreadedpricetermstructure.cpp" />
     <ClCompile Include="qle\termstructures\spreadedsmilesection.cpp" />
+    <ClCompile Include="qle\termstructures\spreadedsmilesection2.cpp" />
+    <ClCompile Include="qle\termstructures\spreadedsurvivalprobabilitytermstructure.cpp" />
     <ClCompile Include="qle\termstructures\spreadedswaptionvolatility.cpp" />
+    <ClCompile Include="qle\termstructures\spreadedyoyvolsurface.cpp" />
     <ClCompile Include="qle\termstructures\strippedoptionletadapter2.cpp" />
     <ClCompile Include="qle\termstructures\strippedyoyinflationoptionletvol.cpp" />
     <ClCompile Include="qle\termstructures\subperiodsswaphelper.cpp" />
