[touch:895]enable bond spread imply in ore app

--- a/OREData/ored/CMakeLists.txt
+++ b/OREData/ored/CMakeLists.txt
@@ -179,6 +179,7 @@ marketdata/capfloorvolcurve.hpp
 marketdata/cdsvolcurve.hpp
 marketdata/commoditycurve.hpp
 marketdata/commodityvolcurve.hpp
+marketdata/compositeloader.hpp
 marketdata/correlationcurve.hpp
 marketdata/csvloader.hpp
 marketdata/curvespec.hpp
