--- a/QuantExt/QuantExt.vcxproj.filters
+++ b/QuantExt/QuantExt.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="qle\models\lgm.hpp">
       <Filter>models</Filter>
     </ClInclude>
+    <ClInclude Include="qle\models\lgmcalibrationinfo.hpp">
+      <Filter>models</Filter>
+    </ClInclude>
     <ClInclude Include="qle\models\lgmimpliedyieldtermstructure.hpp">
       <Filter>models</Filter>
     </ClInclude>
@@ -1163,6 +1166,9 @@
       <Filter>models</Filter>
     </ClCompile>
     <ClCompile Include="qle\models\lgm.cpp">
+      <Filter>models</Filter>
+    </ClCompile>
+    <ClCompile Include="qle\models\lgmcalibrationinfo.cpp">
       <Filter>models</Filter>
     </ClCompile>
     <ClCompile Include="qle\models\lgmimpliedyieldtermstructure.cpp">
