--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="ored\marketdata\todaysmarket.hpp">
       <Filter>marketdata</Filter>
     </ClInclude>
+    <ClInclude Include="ored\marketdata\todaysmarketcalibrationinfo.hpp">
+      <Filter>marketdata</Filter>
+    </ClInclude>
     <ClInclude Include="ored\marketdata\todaysmarketparameters.hpp">
       <Filter>marketdata</Filter>
     </ClInclude>
@@ -636,6 +639,9 @@
       <Filter>marketdata</Filter>
     </ClCompile>
     <ClCompile Include="ored\marketdata\todaysmarket.cpp">
+      <Filter>marketdata</Filter>
+    </ClCompile>
+    <ClCompile Include="ored\marketdata\todaysmarketcalibrationinfo.cpp">
       <Filter>marketdata</Filter>
     </ClCompile>
     <ClCompile Include="ored\marketdata\todaysmarketparameters.cpp">
