--- a/Docker/docker-compose-ore.yml
+++ b/Docker/docker-compose-ore.yml
@@ -7,5 +7,5 @@ services:
       context: ../
       dockerfile: Docker/Dockerfile-ORE
       args:
-        - quantlib_version=1.18_4aacce70b
+        - quantlib_version=1.18_9505aa90f
         - num_cores=16
