[Touch:1319,1513]Update additional results for CDOs and add base corr.

--- a/Docker/docker-compose-ore-debug.yml
+++ b/Docker/docker-compose-ore-debug.yml
@@ -7,5 +7,5 @@ services:
       context: ../
       dockerfile: Docker/Dockerfile-ORE-Debug
       args:
-        - quantlib_version=1.18_4aacce70b
+        - quantlib_version=1.18_8ec6dc346
         - num_cores=16
