--- a/OREData/test/CMakeLists.txt
+++ b/OREData/test/CMakeLists.txt
@@ -32,6 +32,7 @@ fxswap.cpp
 fxtriangulation.cpp
 indices.cpp
 inflationcapfloor.cpp
+inflationcurve.cpp
 legdata.cpp
 mxnircurves.cpp
 optionpaymentdata.cpp
