[Touch:1319]Update QL and Docker references.

--- a/Docker/docker-compose-ore-debug.yml
+++ b/Docker/docker-compose-ore-debug.yml
@@ -7,5 +7,5 @@ services:
       context: ../
       dockerfile: Docker/Dockerfile-ORE-Debug
       args:
-        - quantlib_version=1.18_e49b747cb
+        - quantlib_version=1.18_5c138a4cd
         - num_cores=16
