--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="ored\portfolio\builders\commodityoption.hpp" />
     <ClInclude Include="ored\portfolio\builders\cpicapfloor.hpp" />
     <ClInclude Include="ored\portfolio\builders\creditdefaultswap.hpp" />
+    <ClInclude Include="ored\portfolio\builders\durationadjustedcms.hpp" />
     <ClInclude Include="ored\portfolio\builders\equityforward.hpp" />
     <ClInclude Include="ored\portfolio\builders\equityoption.hpp" />
     <ClInclude Include="ored\portfolio\builders\equityfuturesoption.hpp" />
@@ -158,6 +159,8 @@
     <ClInclude Include="ored\portfolio\creditdefaultswap.hpp" />
     <ClInclude Include="ored\portfolio\creditdefaultswapdata.hpp" />
     <ClInclude Include="ored\portfolio\creditdefaultswapoption.hpp" />
+    <ClInclude Include="ored\portfolio\durationadjustedcmslegbuilder.hpp" />
+    <ClInclude Include="ored\portfolio\durationadjustedcmslegdata.hpp" />
     <ClInclude Include="ored\portfolio\enginedata.hpp" />
     <ClInclude Include="ored\portfolio\enginefactory.hpp" />
     <ClInclude Include="ored\portfolio\envelope.hpp" />
@@ -310,6 +313,7 @@
     <ClCompile Include="ored\portfolio\builders\cms.cpp" />
     <ClCompile Include="ored\portfolio\builders\cmsspread.cpp" />
     <ClCompile Include="ored\portfolio\builders\cpicapfloor.cpp" />
+    <ClCompile Include="ored\portfolio\builders\durationadjustedcms.cpp" />
     <ClCompile Include="ored\portfolio\builders\swaption.cpp" />
     <ClCompile Include="ored\portfolio\builders\yoycapfloor.cpp" />
     <ClCompile Include="ored\portfolio\capfloor.cpp" />
@@ -318,6 +322,8 @@
     <ClCompile Include="ored\portfolio\creditdefaultswap.cpp" />
     <ClCompile Include="ored\portfolio\creditdefaultswapdata.cpp" />
     <ClCompile Include="ored\portfolio\creditdefaultswapoption.cpp" />
+    <ClCompile Include="ored\portfolio\durationadjustedcmslegbuilder.cpp" />
+    <ClCompile Include="ored\portfolio\durationadjustedcmslegdata.cpp" />
     <ClCompile Include="ored\portfolio\enginedata.cpp" />
     <ClCompile Include="ored\portfolio\enginefactory.cpp" />
     <ClCompile Include="ored\portfolio\envelope.cpp" />
